--- a/public/css/app.css
+++ b/public/css/app.css
@@ -716,17 +716,17 @@ select {
 .ml-5 {
   margin-left: 1.25rem;
 }
-.mr-2 {
-  margin-right: 0.5rem;
-}
-.ml-2\.5 {
-  margin-left: 0.625rem;
-}
 .ml-1\.5 {
   margin-left: 0.375rem;
 }
 .ml-1 {
   margin-left: 0.25rem;
+}
+.ml-2\.5 {
+  margin-left: 0.625rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
 }
 .block {
   display: block;
@@ -1408,6 +1408,14 @@ select {
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+.text-blue-300 {
+  --tw-text-opacity: 1;
+  color: rgb(147 197 253 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
