--- a/public/css/app.css
+++ b/public/css/app.css
@@ -737,6 +737,12 @@ select {
 .ml-2\.5 {
   margin-left: 0.625rem;
 }
+.mt-0\.5 {
+  margin-top: 0.125rem;
+}
+.mt-0 {
+  margin-top: 0px;
+}
 .block {
   display: block;
 }
@@ -1209,6 +1215,12 @@ select {
 }
 .p-4 {
   padding: 1rem;
+}
+.p-1\.5 {
+  padding: 0.375rem;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .px-4 {
   padding-left: 1rem;
