--- a/public/css/app.css
+++ b/public/css/app.css
@@ -719,6 +719,9 @@ select {
 .-mr-2 {
   margin-right: -0.5rem;
 }
+.mb-32 {
+  margin-bottom: 8rem;
+}
 .mr-1\.5 {
   margin-right: 0.375rem;
 }
@@ -742,6 +745,12 @@ select {
 }
 .ml-2\.5 {
   margin-left: 0.625rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .block {
   display: block;
@@ -990,6 +999,11 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 .space-x-1\.5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -2094,6 +2108,10 @@ select {
 
   .lg\:max-w-7xl {
     max-width: 80rem;
+  }
+
+  .lg\:max-w-md {
+    max-width: 28rem;
   }
 
   .lg\:max-w-2xl {
