--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2268,6 +2268,12 @@ select {
 .pt-2\.5 {
   padding-top: 0.625rem;
 }
+.pr-1\.5 {
+  padding-right: 0.375rem;
+}
+.pr-1 {
+  padding-right: 0.25rem;
+}
 .text-left {
   text-align: left;
 }
@@ -3140,12 +3146,6 @@ select {
 
   .lg\:w-1\/2 {
     width: 50%;
-  }
-
-  .lg\:w-max {
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
   }
 
   .lg\:max-w-4xl {
