--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2199,6 +2199,10 @@ select {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
 .pt-0\.5 {
   padding-top: 0.125rem;
 }
@@ -2267,12 +2271,6 @@ select {
 }
 .pt-2\.5 {
   padding-top: 0.625rem;
-}
-.pr-1\.5 {
-  padding-right: 0.375rem;
-}
-.pr-1 {
-  padding-right: 0.25rem;
 }
 .text-left {
   text-align: left;
