--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2938,6 +2938,11 @@ select {
     padding-right: 2.5rem;
   }
 
+  .sm\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .sm\:pt-5 {
     padding-top: 1.25rem;
   }
